--- a/modules/ui/legacy/styles/mw.cx.ui.TranslationColumn.less
+++ b/modules/ui/legacy/styles/mw.cx.ui.TranslationColumn.less
@@ -1,6 +1,10 @@
 @import '../../../widgets/common/ext.cx.common.less';
 @import '../../../widgets/common/ext.cx.highlight.less';
 
+.cx-column.cx-column--translation {
+	z-index: auto;
+}
+
 .cx-column--translation {
 	[contenteditable] {
 		outline: 0;
