--- a/modules/widgets/common/ext.cx.common.less
+++ b/modules/widgets/common/ext.cx.common.less
@@ -17,6 +17,8 @@
 @max-dashboard-width: 1500px;
 
 @header-bar-height-legacy: 40px;
+@personal-header-height: 2.5em;
+@personal-header-padding: 0.625em;
 
 .box-shadow-card() {
 	.box-shadow( 0 1px 1px rgba( 0, 0, 0, 0.15 ) );
